Added support for transactions