@@ -62,7 +62,7 @@
   </issueManagement>
 
   <properties>
-    <version.java>22</version.java>
+    <version.java>23</version.java>
 
     <version.jna>5.13.0</version.jna>
   </properties>
@@ -110,6 +110,7 @@
           <configuration>
             <excludePackageNames>com.github.robtimus.os.windows.registry.foreign</excludePackageNames>
             <release>${version.java}</release>
+            <additionalOptions>--enable-preview</additionalOptions>
           </configuration>
         </plugin>
       </plugins>
@@ -119,6 +120,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -217,6 +223,7 @@
           <argLine>
             @{argLine}
             --add-opens com.github.robtimus.os.windows.registry/com.github.robtimus.os.windows.registry=ALL-UNNAMED
+            --enable-preview
           </argLine>
         </configuration>
       </plugin>
@@ -314,6 +321,7 @@
               <argLine>
                 @{argLine}
                 --add-opens com.github.robtimus.os.windows.registry/com.github.robtimus.os.windows.registry=ALL-UNNAMED
+                --enable-preview
               </argLine>
               <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
             </configuration>
